// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gitignore > should respect .gitignore in subdirectory 1`] = `
"--------------------
arguments: --check
working directory: fixtures/gitignore
exit code: 1
--- STDOUT ---------
Checking formatting...

another/another.js (<variable>ms)
root.js (<variable>ms)
subdir/sub.js (<variable>ms)

Format issues found in above 3 files. Run without \`--check\` to fix.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`gitignore > should respect root .gitignore 1`] = `
"--------------------
arguments: --check
working directory: fixtures/gitignore
exit code: 1
--- STDOUT ---------
Checking formatting...

another/another.js (<variable>ms)
root.js (<variable>ms)

Format issues found in above 2 files. Run without \`--check\` to fix.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------"
`;
